# src/main/java/com/plip/video/application/port/in/dto/VideoRegisterCommand.java
@@ -1,12 +1,0 @@
-package com.plip.video.application.port.in.dto;
-
-import org.springframework.web.multipart.MultipartFile;
-
-import java.util.UUID;
-
-public record VideoRegisterCommand(
-		UUID userUuid,
-		MultipartFile videoFile,
-		String caption
-) {
-}
